--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Terraform
 terraform/.terraform/
 terraform/.terraform.lock.hcl
+**/.terraform/*
 **/terraform.tfstate*
 **/crash.log
 **/override.tf*
