--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -16,6 +16,10 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+      TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
+      TF_VAR_backend_image: ${{ secrets.TF_VAR_backend_image }}
+      TF_VAR_frontend_image: ${{ secrets.TF_VAR_frontend_image }}
+      TF_VAR_media_bucket_name: ${{ secrets.TF_VAR_media_bucket_name }}
 
     defaults:
       run:
